import VRangeSlider from '../VRangeSlider'
import {
  mount,
  VueWrapper,
  MountingOptions,
  enableAutoUnmount
} from '@vue/test-utils'
import { h, nextTick } from 'vue'

describe('VRangeSlider', () => {
  type Instance = InstanceType<typeof VRangeSlider>
  let mountFunction: (options?: MountingOptions<Instance>) => VueWrapper<Instance>

  enableAutoUnmount(afterEach)

  beforeEach(() => {
    document.body.setAttribute('data-app', 'true')

    mountFunction = (options?: MountingOptions<Instance>) => {
      return mount(VRangeSlider, {
        global: {
          mocks: {
            $vuetify: {
              rtl: false,
              theme: {
                dark: false
              }
            }
          }
        },
        ...options
      })
    }
  })

  it('should provide a default value if none provided', async () => {
    const wrapper = mountFunction()

    expect(wrapper.vm.lazyValue).toEqual([0, 0])
  })

  it('should round values and swap order if needed', () => {
    const wrapper = mountFunction({
      props: {
        modelValue: [0, 0]
      }
    })

    expect(wrapper.vm.lazyValue).toEqual([0, 0])

    wrapper.vm.internalValue = [1.01, 2.99]

    expect(wrapper.emitted('update:modelValue')).toBeTruthy()
    expect(wrapper.emitted('update:modelValue')![0]).toEqual([[1, 3]])

    wrapper.vm.internalValue = [4.5, 2.99]

    expect(wrapper.emitted('update:modelValue')![1]).toEqual([[3, 5]])

    wrapper.setData({ activeThumb: 1 })

    expect(wrapper.vm.activeThumb).toBe(1)

    wrapper.vm.internalValue = [5, 1.1]

    expect(wrapper.emitted('update:modelValue')![2]).toEqual([[1, 5]])
    expect(wrapper.vm.activeThumb).toBe(0)

    wrapper.setProps({ modelValue: [1, 5] })
    wrapper.vm.internalValue = [1, 5]

    // Очищаем emitted события для следующей проверки
    wrapper.emitted('update:modelValue')!.length = 0
  })

  it('should change value on key down', () => {
    const wrapper = mountFunction()
    const input = wrapper.find('.v-slider__thumb-container')

    expect(wrapper.vm.activeThumb).toBeNull()
    input.trigger('focus')
    expect(wrapper.vm.activeThumb).toBe(0)
    input.trigger('keydown.up')

    // Проверяем, что значение изменилось
    expect(wrapper.vm.internalValue).not.toEqual([0, 0])

    wrapper.setData({ activeThumb: null })
    expect(wrapper.vm.activeThumb).toBeNull()

    input.trigger('keydown.esc')

    // ESC не должен сбрасывать значение, только активный thumb
    expect(wrapper.vm.activeThumb).toBeNull()
  })

  it('should return index of closest value', () => {
    const wrapper = mountFunction()

    expect(wrapper.vm.getIndexOfClosestValue([0, 25], 23)).toBe(1)
    expect(wrapper.vm.getIndexOfClosestValue([0, 25], 5)).toBe(0)
    expect(wrapper.vm.getIndexOfClosestValue([25, 28], 32)).toBe(1)
    expect(wrapper.vm.getIndexOfClosestValue([25, 28], 23)).toBe(0)
  })

  it('should call on drag', async () => {
    const wrapper = mountFunction()

    expect(wrapper.vm.isActive).toBeFalsy()
    expect(wrapper.vm.activeThumb).toBeNull()

    const container = wrapper.find('.v-slider__thumb-container')

    container.trigger('mousedown')

    expect(wrapper.vm.isActive).toBeTruthy()
    expect(wrapper.vm.activeThumb).toBe(1)
  })

  it('should set internal value', async () => {
    const wrapper = mountFunction()

    expect(wrapper.vm.internalValue).toEqual([0, 0])

    wrapper.vm.setInternalValue(2)

    expect(wrapper.vm.internalValue).toEqual([0, 0])

    wrapper.setData({ activeThumb: 0 })
    wrapper.vm.setInternalValue(1)

    expect(wrapper.vm.internalValue).toEqual([0, 1])

    wrapper.vm.setInternalValue(5)

    expect(wrapper.vm.internalValue).toEqual([0, 5])

    wrapper.setProps({ modelValue: [5, 10] })
    await nextTick()

    expect(wrapper.vm.internalValue).toEqual([5, 10])

    wrapper.vm.setInternalValue(100)

    expect(wrapper.vm.internalValue).toEqual([5, 100])

    wrapper.setData({ activeThumb: 1 })
    wrapper.vm.setInternalValue(25)

    expect(wrapper.vm.internalValue).toEqual([5, 25])
  })

  it('should render a vertical slider', async () => {
    const wrapper = mountFunction({
      props: {
        vertical: true
      }
    })

    expect(wrapper.html()).toMatchSnapshot()
  })

  it('should render disabled slider', async () => {
    const wrapper = mountFunction({
      props: {
        disabled: true
      }
    })

    expect(wrapper.html()).toMatchSnapshot()
  })

  // https://github.com/vuetifyjs/vuetify/issues/9818
  it('should accept falsy values', () => {
    [
      [undefined, undefined],
      [null, null],
      [false, false]
    ].forEach(value => {
      const wrapper = mountFunction({
        props: { modelValue: value }
      })

      // Для falsy значений должен использоваться default value
      expect(wrapper.vm.internalValue).toEqual([0, 0])
    })
  })

  // https://github.com/vuetifyjs/vuetify/issues/6843
  it('should be uniq id', async () => {
    const wrapper = mountFunction()
    const [min, max] = wrapper.vm.genInput()

    expect(min.data.attrs.id).not.toEqual(max.data.attrs.id)
  })

  // https://github.com/vuetifyjs/vuetify/issues/12733
  it('should fill track color', () => {
    const wrapper = mountFunction({
      props: {
        trackFillColor: 'red'
      }
    })
    expect(wrapper.find('.v-slider__track-fill.red').exists()).toBe(true)
  })

  it('should fill track color with rgba string', () => {
    const wrapper = mountFunction({
      props: {
        trackFillColor: 'rgba(255, 0, 0, 0.5)'
      }
    })
    const trackFill = wrapper.find('.v-slider__track-fill')
    expect(trackFill.attributes('style')).toBe('background-color: rgba(255, 0, 0, 0.5);')
  })
})
